# Bypass-403

./: .gitignore  README.md  out_aggressive.json  out_all.csv  out_all.json  out_full_aggressive.csv  out_full_aggressive.json  pyproject.toml
src/bypass/: __init__.py  __main__.py  cli.py  engine.py  http_client.py  models.py  safety.py
src/bypass/analyzers/: response_diff.py
src/bypass/payloads/: __init__.py  auth_401.py  domain_403.py  headers_403.py  host_sni_403.py  methods_403.py  paths_403.py  protocols_403.py  query_403.py  smuggling_lite.py
src/bypass/reporters/: csv_reporter.py  json_reporter.py
tests/: test_analyzer.py  test_cli_smoke.py  test_cli_summary.py  test_engine.py  test_guided_combos.py  test_host_sni_payloads.py  test_payloads.py  test_protocol_versions.py  test_replay_filtering.py  test_reporter_redaction.py  test_smuggling_lite_payloads.py
