[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bypass-tool"
version = "0.1.0"
description = "Herramienta extensible de bypass (403, cabeceras, rutas) para DevSec y Bug Bounty"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.scripts]
bypass = "bypass.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bypass"]

[tool.ruff]
line-length = 100
target-version = "py310"
